@@ -1,4 +1,5 @@
 #
+# $OpenBSD: misc,v 1.2 1996/05/30 22:15:00 niklas Exp $
 # $NetBSD: misc,v 1.2 1996/05/15 19:49:04 is Exp $
 #
 
