@@ -1,4 +1,5 @@
 #
+# $OpenBSD: test.doc,v 1.2 1996/05/30 22:15:18 niklas Exp $
 # $NetBSD: test.doc,v 1.2 1996/05/15 19:49:40 is Exp $
 #
 
